--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ idna
 itsdangerous
 Jinja2
 requests
-git+https://github.com/Nenirey/Telethon@master#telethon
+git+https://github.com/guillermo9108t/Telethon@master#telethon
 deltachat==1.68
-git+https://github.com/Nenirey/simplebot@master#simplebot
+git+https://github.com/guillermo9108t/simplebot@master#simplebot
 mock
 psutil
 git+https://gitlab.com/mattbas/python-lottie@master#lottie
