--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,22 @@
-
+certifi
+chardet
+Click
+cryptg
+aiohttp
+hachoir
+idna
+itsdangerous
+Jinja2
+requests
+deltachat==1.70
+git+https://github.com/Nenirey/Telethon@master#telethon
+git+https://github.com/simplebot-org/simplebot@master#simplebot
+mock
+git+https://gitlab.com/mattbas/python-lottie@master#lottie
+pillow
+cairosvg
+psutil
+dropbox
 
 
 
